# rp-sync

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.forejo/workflows/: build-and-push.yml
.github/workflows/: build-and-push.yml
nginx/: Dockerfile  entrypoint.sh  error.html
rp_sync/: acme_client.py  cert_dispatcher.py  cli.py  config.py  daemon.py  dns_updater.py  dsm.py  http_redirect_server.py  logging_utils.py  models.py  nginx_writer.py  orchestrator.py  redirect_backend.py  service.py  step_ca.py  watcher.py
