[project]
name = "rp-sync"
version = "0.1.0"
description = "Sync nginx reverse proxy rules, DNS (RFC2136) and TLS certs from a single config."
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "requests>=2.32",
  "dnspython>=2.6",
  "cryptography>=42.0",
  "acme>=2.11",
  "josepy>=1.14",
]

[project.scripts]
rp-sync = "rp_sync.cli:main"

[tool.black]
line-length = 107
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | secrets
  | services
)/
'''
